[added] logo digi

--- a/plochonozi/cviceni.html
+++ b/plochonozi/cviceni.html
@@ -27,9 +27,9 @@
 
         <div class="collapse navbar-collapse" id="navbarsDefault">
           <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                  <a class="nav-link" href="dvz-plochonozi_metodicky-list.pdf">Metodický list</a>
-              </li>
+            <li class="nav-item">
+              <a class="nav-link" href="dvz-plochonozi_metodicky-list.pdf">Metodický list</a>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="dropdown1" data-toggle="dropdown" aria-haspopup="true"
                 aria-expanded="false">Moduly </a>
@@ -116,6 +116,14 @@
           data-target="#n15">15</button>
       </div>
     </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <img src="imgs/logotyp.png" class="w-75 figure-img img-fluid rounded mx-auto d-block pt-5 pb-3"
+            alt="Loga projektu">
+        </div>
+      </div>
+    </div>
   </main>
 
   <!-- P1 -->
@@ -191,10 +199,10 @@
                 class="badge badge-success">Prevence</span>
             </div>
             <div class="col-lg-6">
-                <video class="rounded img-fluid float-right" controls autoplay muted loop>
-                    <source src="videos/p2.mp4" type="video/mp4">
-                    Váš prohlížeč nepodporuje MP4 soubory.
-                  </video>
+              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+                <source src="videos/p2.mp4" type="video/mp4">
+                Váš prohlížeč nepodporuje MP4 soubory.
+              </video>
             </div>
           </div>
         </div>
@@ -233,10 +241,10 @@
                 class="badge badge-success">Prevence</span>
             </div>
             <div class="col-lg-6">
-                <video class="rounded img-fluid float-right" controls autoplay muted loop>
-                    <source src="videos/p3.mp4" type="video/mp4">
-                    Váš prohlížeč nepodporuje MP4 soubory.
-                  </video>
+              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+                <source src="videos/p3.mp4" type="video/mp4">
+                Váš prohlížeč nepodporuje MP4 soubory.
+              </video>
             </div>
           </div>
         </div>
@@ -276,10 +284,10 @@
                 class="badge badge-success">Prevence</span>
             </div>
             <div class="col-lg-6">
-                <video class="rounded img-fluid float-right" controls autoplay muted loop>
-                    <source src="videos/p4.mp4" type="video/mp4">
-                    Váš prohlížeč nepodporuje MP4 soubory.
-                  </video>
+              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+                <source src="videos/p4.mp4" type="video/mp4">
+                Váš prohlížeč nepodporuje MP4 soubory.
+              </video>
             </div>
           </div>
         </div>
@@ -318,10 +326,10 @@
                 class="badge badge-success">Prevence</span>
             </div>
             <div class="col-lg-6">
-                <video class="rounded img-fluid float-right" controls autoplay muted loop>
-                    <source src="videos/p5.mp4" type="video/mp4">
-                    Váš prohlížeč nepodporuje MP4 soubory.
-                  </video>
+              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+                <source src="videos/p5.mp4" type="video/mp4">
+                Váš prohlížeč nepodporuje MP4 soubory.
+              </video>
             </div>
           </div>
         </div>
@@ -360,10 +368,10 @@
                 class="badge badge-success">Prevence</span>
             </div>
             <div class="col-lg-6">
-                <video class="rounded img-fluid float-right" controls autoplay muted loop>
-                    <source src="videos/p6.mp4" type="video/mp4">
-                    Váš prohlížeč nepodporuje MP4 soubory.
-                  </video>
+              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+                <source src="videos/p6.mp4" type="video/mp4">
+                Váš prohlížeč nepodporuje MP4 soubory.
+              </video>
             </div>
           </div>
         </div>
@@ -402,10 +410,10 @@
                 class="badge badge-success">Prevence</span>
             </div>
             <div class="col-lg-6">
-                <video class="rounded img-fluid float-right" controls autoplay muted loop>
-                    <source src="videos/p7.mp4" type="video/mp4">
-                    Váš prohlížeč nepodporuje MP4 soubory.
-                  </video>
+              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+                <source src="videos/p7.mp4" type="video/mp4">
+                Váš prohlížeč nepodporuje MP4 soubory.
+              </video>
             </div>
           </div>
         </div>
@@ -448,10 +456,10 @@
                 class="badge badge-success">Prevence</span>
             </div>
             <div class="col-lg-6">
-                <video class="rounded img-fluid float-right" controls autoplay muted loop>
-                    <source src="videos/p8.mp4" type="video/mp4">
-                    Váš prohlížeč nepodporuje MP4 soubory.
-                  </video>
+              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+                <source src="videos/p8.mp4" type="video/mp4">
+                Váš prohlížeč nepodporuje MP4 soubory.
+              </video>
             </div>
           </div>
         </div>
@@ -489,10 +497,10 @@
                 class="badge badge-success">Prevence</span>
             </div>
             <div class="col-lg-6">
-                <video class="rounded img-fluid float-right" controls autoplay muted loop>
-                    <source src="videos/p9.mp4" type="video/mp4">
-                    Váš prohlížeč nepodporuje MP4 soubory.
-                  </video>
+              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+                <source src="videos/p9.mp4" type="video/mp4">
+                Váš prohlížeč nepodporuje MP4 soubory.
+              </video>
             </div>
           </div>
         </div>
@@ -530,10 +538,10 @@
                 class="badge badge-success">Prevence</span>
             </div>
             <div class="col-lg-6">
-                <video class="rounded img-fluid float-right" controls autoplay muted loop>
-                    <source src="videos/p10.mp4" type="video/mp4">
-                    Váš prohlížeč nepodporuje MP4 soubory.
-                  </video>
+              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+                <source src="videos/p10.mp4" type="video/mp4">
+                Váš prohlížeč nepodporuje MP4 soubory.
+              </video>
             </div>
           </div>
         </div>
@@ -571,10 +579,10 @@
               <span class="badge badge-secondary">Základní škola</span> <span class="badge badge-danger">Náprava</span>
             </div>
             <div class="col-lg-6">
-                <video class="rounded img-fluid float-right" controls autoplay muted loop>
-                    <source src="videos/n1.mp4" type="video/mp4">
-                    Váš prohlížeč nepodporuje MP4 soubory.
-                  </video>
+              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+                <source src="videos/n1.mp4" type="video/mp4">
+                Váš prohlížeč nepodporuje MP4 soubory.
+              </video>
             </div>
           </div>
         </div>
@@ -614,10 +622,10 @@
               <span class="badge badge-secondary">Základní škola</span> <span class="badge badge-danger">Náprava</span>
             </div>
             <div class="col-lg-6">
-                <video class="rounded img-fluid float-right" controls autoplay muted loop>
-                    <source src="videos/n2.mp4" type="video/mp4">
-                    Váš prohlížeč nepodporuje MP4 soubory.
-                  </video>
+              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+                <source src="videos/n2.mp4" type="video/mp4">
+                Váš prohlížeč nepodporuje MP4 soubory.
+              </video>
             </div>
           </div>
         </div>
@@ -656,10 +664,10 @@
               <span class="badge badge-secondary">Základní škola</span> <span class="badge badge-danger">Náprava</span>
             </div>
             <div class="col-lg-6">
-                <video class="rounded img-fluid float-right" controls autoplay muted loop>
-                    <source src="videos/n3.mp4" type="video/mp4">
-                    Váš prohlížeč nepodporuje MP4 soubory.
-                  </video>
+              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+                <source src="videos/n3.mp4" type="video/mp4">
+                Váš prohlížeč nepodporuje MP4 soubory.
+              </video>
             </div>
           </div>
         </div>
@@ -697,10 +705,10 @@
               <span class="badge badge-secondary">Základní škola</span> <span class="badge badge-danger">Náprava</span>
             </div>
             <div class="col-lg-6">
-                <video class="rounded img-fluid float-right" controls autoplay muted loop>
-                    <source src="videos/n4.mp4" type="video/mp4">
-                    Váš prohlížeč nepodporuje MP4 soubory.
-                  </video>
+              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+                <source src="videos/n4.mp4" type="video/mp4">
+                Váš prohlížeč nepodporuje MP4 soubory.
+              </video>
             </div>
           </div>
         </div>
@@ -738,10 +746,10 @@
               <span class="badge badge-secondary">Základní škola</span> <span class="badge badge-danger">Náprava</span>
             </div>
             <div class="col-lg-6">
-                <video class="rounded img-fluid float-right" controls autoplay muted loop>
-                    <source src="videos/n5.mp4" type="video/mp4">
-                    Váš prohlížeč nepodporuje MP4 soubory.
-                  </video>
+              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+                <source src="videos/n5.mp4" type="video/mp4">
+                Váš prohlížeč nepodporuje MP4 soubory.
+              </video>
             </div>
           </div>
         </div>
@@ -779,10 +787,10 @@
               <span class="badge badge-secondary">Základní škola</span> <span class="badge badge-danger">Náprava</span>
             </div>
             <div class="col-lg-6">
-                <video class="rounded img-fluid float-right" controls autoplay muted loop>
-                    <source src="videos/n6.mp4" type="video/mp4">
-                    Váš prohlížeč nepodporuje MP4 soubory.
-                  </video>
+              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+                <source src="videos/n6.mp4" type="video/mp4">
+                Váš prohlížeč nepodporuje MP4 soubory.
+              </video>
             </div>
           </div>
         </div>
@@ -819,10 +827,10 @@
               <span class="badge badge-secondary">Základní škola</span> <span class="badge badge-danger">Náprava</span>
             </div>
             <div class="col-lg-6">
-                <video class="rounded img-fluid float-right" controls autoplay muted loop>
-                    <source src="videos/n7.mp4" type="video/mp4">
-                    Váš prohlížeč nepodporuje MP4 soubory.
-                  </video>
+              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+                <source src="videos/n7.mp4" type="video/mp4">
+                Váš prohlížeč nepodporuje MP4 soubory.
+              </video>
             </div>
           </div>
         </div>
@@ -860,10 +868,10 @@
               <span class="badge badge-secondary">Základní škola</span> <span class="badge badge-danger">Náprava</span>
             </div>
             <div class="col-lg-6">
-                <video class="rounded img-fluid float-right" controls autoplay muted loop>
-                    <source src="videos/n8.mp4" type="video/mp4">
-                    Váš prohlížeč nepodporuje MP4 soubory.
-                  </video>
+              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+                <source src="videos/n8.mp4" type="video/mp4">
+                Váš prohlížeč nepodporuje MP4 soubory.
+              </video>
             </div>
           </div>
         </div>
@@ -901,10 +909,10 @@
               <span class="badge badge-secondary">Základní škola</span> <span class="badge badge-danger">Náprava</span>
             </div>
             <div class="col-lg-6">
-                <video class="rounded img-fluid float-right" controls autoplay muted loop>
-                    <source src="videos/n9.mp4" type="video/mp4">
-                    Váš prohlížeč nepodporuje MP4 soubory.
-                  </video>
+              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+                <source src="videos/n9.mp4" type="video/mp4">
+                Váš prohlížeč nepodporuje MP4 soubory.
+              </video>
             </div>
           </div>
         </div>
@@ -946,10 +954,10 @@
               <span class="badge badge-secondary">Základní škola</span> <span class="badge badge-danger">Náprava</span>
             </div>
             <div class="col-lg-6">
-                <video class="rounded img-fluid float-right" controls autoplay muted loop>
-                    <source src="videos/n10.mp4" type="video/mp4">
-                    Váš prohlížeč nepodporuje MP4 soubory.
-                  </video>
+              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+                <source src="videos/n10.mp4" type="video/mp4">
+                Váš prohlížeč nepodporuje MP4 soubory.
+              </video>
             </div>
           </div>
         </div>
@@ -991,10 +999,10 @@
               <span class="badge badge-secondary">Základní škola</span> <span class="badge badge-danger">Náprava</span>
             </div>
             <div class="col-lg-6">
-                <video class="rounded img-fluid float-right" controls autoplay muted loop>
-                    <source src="videos/n11.mp4" type="video/mp4">
-                    Váš prohlížeč nepodporuje MP4 soubory.
-                  </video>
+              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+                <source src="videos/n11.mp4" type="video/mp4">
+                Váš prohlížeč nepodporuje MP4 soubory.
+              </video>
             </div>
           </div>
         </div>
@@ -1031,10 +1039,10 @@
               <span class="badge badge-secondary">Základní škola</span> <span class="badge badge-danger">Náprava</span>
             </div>
             <div class="col-lg-6">
-                <video class="rounded img-fluid float-right" controls autoplay muted loop>
-                    <source src="videos/n12.mp4" type="video/mp4">
-                    Váš prohlížeč nepodporuje MP4 soubory.
-                  </video>
+              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+                <source src="videos/n12.mp4" type="video/mp4">
+                Váš prohlížeč nepodporuje MP4 soubory.
+              </video>
             </div>
           </div>
         </div>
@@ -1073,10 +1081,10 @@
               <span class="badge badge-secondary">Základní škola</span> <span class="badge badge-danger">Náprava</span>
             </div>
             <div class="col-lg-6">
-                <video class="rounded img-fluid float-right" controls autoplay muted loop>
-                    <source src="videos/n13.mp4" type="video/mp4">
-                    Váš prohlížeč nepodporuje MP4 soubory.
-                  </video>
+              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+                <source src="videos/n13.mp4" type="video/mp4">
+                Váš prohlížeč nepodporuje MP4 soubory.
+              </video>
             </div>
           </div>
         </div>
@@ -1115,10 +1123,10 @@
               <span class="badge badge-secondary">Základní škola</span> <span class="badge badge-danger">Náprava</span>
             </div>
             <div class="col-lg-6">
-                <video class="rounded img-fluid float-right" controls autoplay muted loop>
-                    <source src="videos/n14.mp4" type="video/mp4">
-                    Váš prohlížeč nepodporuje MP4 soubory.
-                  </video>
+              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+                <source src="videos/n14.mp4" type="video/mp4">
+                Váš prohlížeč nepodporuje MP4 soubory.
+              </video>
             </div>
           </div>
         </div>
@@ -1157,10 +1165,10 @@
               <span class="badge badge-secondary">Základní škola</span> <span class="badge badge-danger">Náprava</span>
             </div>
             <div class="col-lg-6">
-                <video class="rounded img-fluid float-right" controls autoplay muted loop>
-                    <source src="videos/n15.mp4" type="video/mp4">
-                    Váš prohlížeč nepodporuje MP4 soubory.
-                  </video>
+              <video class="rounded img-fluid float-right" controls autoplay muted loop>
+                <source src="videos/n15.mp4" type="video/mp4">
+                Váš prohlížeč nepodporuje MP4 soubory.
+              </video>
             </div>
           </div>
         </div>
@@ -1169,17 +1177,19 @@
   </div>
 
   <footer class="footer mt-auto py-3 text-muted bg-dark">
-      <div class="container">
-          <div class="row">
-              <div class="col-lg-6 py-1">
-                  <p class="text-white-50 text-lg-left text-center">&copy; 2019 Podpora rozvoje digitální gramotnosti</p>
-              </div>
-              <div class="col-lg-6 py-1">
-                  <p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 31.03.2019</p>
-              </div>
-          </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 py-1">
+          <p class="text-white-50 text-lg-left text-center">&copy; 2019 | <a
+              href="https://pages.pedf.cuni.cz/digitalni-gramotnost/" class="text-white-50">Podpora rozvoje digitální
+              gramotnosti</a>
+          </p>
+        </div>
+        <div class="col-lg-6 py-1">
+          <p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 08.09.2019</p>
+        </div>
       </div>
-      </div>
+    </div>
   </footer>
 
   <!-- Optional JavaScript -->
