--- a/plochonozi/index.html
+++ b/plochonozi/index.html
@@ -50,7 +50,8 @@
                 <h1 class="display-4">Klenba nohy</h1>
                 <p class="lead text-muted">Anatomie nohy, vývoj klenby nohy a diagnostika plochonoží.</p>
                 <p>
-                    <a href="https://github.com/heidler/dvz/releases" class="btn btn-primary my-2">Stáhnout offline verzi</a>
+                    <a href="https://github.com/heidler/dvz/releases" class="btn btn-primary my-2">Stáhnout offline
+                        verzi</a>
                 </p>
             </div>
         </div>
@@ -87,20 +88,29 @@
                 </a>
             </div>
         </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <img src="imgs/logotyp.png" class="w-75 figure-img img-fluid rounded mx-auto d-block pt-5 pb-3"
+                        alt="Loga projektu">
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer class="footer mt-auto py-3 text-muted bg-dark">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 py-1">
-                    <p class="text-white-50 text-lg-left text-center">&copy; 2019 Podpora rozvoje digitální gramotnosti
+                    <p class="text-white-50 text-lg-left text-center">&copy; 2019 | <a
+                            href="https://pages.pedf.cuni.cz/digitalni-gramotnost/" class="text-white-50">Podpora
+                            rozvoje digitální gramotnosti</a>
                     </p>
                 </div>
                 <div class="col-lg-6 py-1">
-                    <p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 31.03.2019</p>
+                    <p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 08.09.2019</p>
                 </div>
             </div>
-        </div>
         </div>
     </footer>
 
