--- a/plochonozi/diagnostika.html
+++ b/plochonozi/diagnostika.html
@@ -167,7 +167,8 @@
 							</figure>
 						</div>
 					</div>
-					<figcaption class="figure-caption text-center pb-4"><strong>Obrázek 5–8</strong> Plantogram pomocí barvy na tělo
+					<figcaption class="figure-caption text-center pb-4"><strong>Obrázek 5–8</strong> Plantogram pomocí
+						barvy na tělo
 					</figcaption>
 
 					<h3 class="h4 pt-5" id="item-3">Index nohy</h3>
@@ -201,7 +202,7 @@
 					</ul>
 					<div class="card border-dark shadow-sm d-flex my-4">
 						<div class="card-header">
-								<h5 class="h6 mb-0">Noha plochá</h5>
+							<h5 class="h6 mb-0">Noha plochá</h5>
 						</div>
 						<div class="card-body">
 							<ol>
@@ -213,7 +214,7 @@
 					</div>
 					<div class="card border-dark shadow-sm d-flex my-4">
 						<div class="card-header">
-								<h5 class="h6 mb-0">Noha normálně klenutá</h5>
+							<h5 class="h6 mb-0">Noha normálně klenutá</h5>
 						</div>
 						<div class="card-body">
 							<ol>
@@ -225,7 +226,7 @@
 					</div>
 					<div class="card border-dark shadow-sm d-flex my-4">
 						<div class="card-header">
-								<h5 class="h6 mb-0">Noha vysoká</h5>
+							<h5 class="h6 mb-0">Noha vysoká</h5>
 						</div>
 						<div class="card-body">
 							<ol>
@@ -263,10 +264,12 @@
 							<a href="#postup-3">Přesunutí souboru do pracovní stanice. *</a>
 						</li>
 						<li>
-							<a href="#postup-4">Zjištění nejužšího a nejširšího místa plantogramu pomocí aplikace Geogebra.</a>
+							<a href="#postup-4">Zjištění nejužšího a nejširšího místa plantogramu pomocí aplikace
+								Geogebra.</a>
 						</li>
 						<li>
-							<a href="#postup-5">Výpočet indexu nohy pomocí tabulkového procesoru * nebo využití online výpočtu.</a>
+							<a href="#postup-5">Výpočet indexu nohy pomocí tabulkového procesoru * nebo využití online
+								výpočtu.</a>
 						</li>
 					</ol>
 					<small class="text-muted">* Tyto kroky lze vynechat.</small>
@@ -277,8 +280,9 @@
 						</div>
 						<div class="card-body">
 							<p class="text-justify">Jak vytvořit svůj vlastní otisk chodidla je součástí kapitoly <a
-									href="#item-2">Plantogram (otisk chodidla)</a>. Při tvorbě otisku chodidla je nutné plosky nohou zatížit přirozeným způsobem, 
-									tedy stoj mírně rozkročný. Pozor na přenášení celé váhy na jednu z dolních končetin.</p>
+									href="#item-2">Plantogram (otisk chodidla)</a>. Při tvorbě otisku chodidla je nutné
+								plosky nohou zatížit přirozeným způsobem,
+								tedy stoj mírně rozkročný. Pozor na přenášení celé váhy na jednu z dolních končetin.</p>
 						</div>
 					</div>
 
@@ -289,13 +293,15 @@
 								aplikace</h5>
 						</div>
 						<div class="card-body">
-							<p class="text-justify">Pro přenesení dokumentů, obrázků apod. do digitální formy, lze využít např. skenner. V
+							<p class="text-justify">Pro přenesení dokumentů, obrázků apod. do digitální formy, lze
+								využít např. skenner. V
 								dnešní
 								době však existují nové technologie,
 								které dokáží plnohodnotně nahradit skenner, a tak nám postačí pouze mobilní zařízení s
 								vhodnou aplikací,
 								která skenování pomocí augumentované reality zajišťuje.</p>
-							<p class="text-justify">Pro naskenování otisku chodidla do digitální formy doporučujeme některou z těchto
+							<p class="text-justify">Pro naskenování otisku chodidla do digitální formy doporučujeme
+								některou z těchto
 								aplikací, které lze zdarma stáhnout na mobilní telefony s operačním systémem Android /
 								iOS:</p>
 							<ul>
@@ -304,7 +310,7 @@
 									| <a
 										href="https://itunes.apple.com/us/app/microsoft-office-lens-pdf-scan/id975925059?mt=8">iOS</a>
 								</li>
-								<li>Fotoskener od Fotek Google – <a
+								<li>Fotoskener od Fotek Google (doporučujeme) – <a
 										href="https://play.google.com/store/apps/details?id=com.google.android.apps.photos.scanner&hl=cs">Android</a>
 									| <a
 										href="https://itunes.apple.com/us/app/photoscan-by-google-photos/id1165525994?mt=8">iOS</a>
@@ -315,7 +321,8 @@
 										href="https://itunes.apple.com/us/app/adobe-scan-doc-scanner-to-pdf/id1199564834?mt=8">iOS</a>
 								</li>
 							</ul>
-							<p class="text-justify">Pro ukázku průběhu skenování otisku chodidla jsme zvolili aplikaci Microsoft Office Lens,
+							<p class="text-justify">Pro ukázku průběhu skenování otisku chodidla jsme zvolili aplikaci
+								Microsoft Office Lens,
 								následuje krátký fotografický návod (obrázek 9–12). Popis jednotlivých obrázků se
 								zobrazí po rozkliknutí fotografie.</p>
 
@@ -365,7 +372,8 @@
 								chodidla pomocí mobilní
 								aplikace Microsoft Office Lens
 							</figcaption>
-							<p class="text-justify">Po tomto kroku máme <mark>převedený otisk chodidla do digitální</mark> podoby a jsme
+							<p class="text-justify">Po tomto kroku máme <mark>převedený otisk chodidla do
+									digitální</mark> podoby a jsme
 								schopni soubor
 								přenést do pracovní stanice (PC).</p>
 						</div>
@@ -377,14 +385,16 @@
 							<h5 class="h6 mb-0">3. Přesunutí souboru do pracovní stanice</h5>
 						</div>
 						<div class="card-body">
-							<p class="text-justify">Naskenovaný otisk z mobilního telefonu lze přesunout mnoha způsoby:</p>
+							<p class="text-justify">Naskenovaný otisk z mobilního telefonu lze přesunout mnoha způsoby:
+							</p>
 							<ul>
 								<li>sdílet pomocí sociálních sítí,</li>
 								<li>uložit do osobního cloudového uložiště (Google Disk, OneDrive, Dropbox ...),</li>
 								<li>poslat jako přílohu v emailu,</li>
 								<li>přesunout pomocí USB kabelu (mobil → PC).</li>
 							</ul>
-							<p class="text-justify">Následuje ukázka přenosu otisku chodidla pomocí USB kabelu (operační systém Android):</p>
+							<p class="text-justify">Následuje ukázka přenosu otisku chodidla pomocí USB kabelu (operační
+								systém Android):</p>
 							<ol>
 								<li>Nejdříve je nutné připojit telefon k PC pomocí kabelu.</li>
 								<li>Po připojení telefonu k PC Vás telefon vyzve k potvrzení přenosu souborů mezi
@@ -396,7 +406,8 @@
 								<li>Otisk chodidla přeneseme do počítače (přetažením souboru nebo pomocí klávesové
 									zkrakty Ctrl+C pro kopírování a Ctrl+V pro vložení).</li>
 							</ol>
-							<p class="text-justify">Otisk chodidla máme připravený pro zjištění nejužšího a nejširšího místo nohy a
+							<p class="text-justify">Otisk chodidla máme připravený pro zjištění nejužšího a nejširšího
+								místo nohy a
 								následného výpočtu indexu nohy pomocí metody Chippaux-Šmiřák.</p>
 						</div>
 					</div>
@@ -408,14 +419,16 @@
 								pomocí aplikace Geogebra</h5>
 						</div>
 						<div class="card-body">
-							<p class="text-justify">Program <a href="https://www.geogebra.org/">Geogebra</a> je webová matematická aplikace,
+							<p class="text-justify">Program <a href="https://www.geogebra.org/">Geogebra</a> je webová
+								matematická aplikace,
 								kterou lze využít pro geometrii, algebru,
 								ale například i pro tvorbu grafů, výpočet statistiky apod. Výhodou této aplikace je
 								jednoduché intuitivní ovládání a obrovská komunita
 								uživatelů z celého světa. Geogebru lze využít i pro tvorbu interaktivních výukovách
 								materiálů.
 								Jako další výhodou je, že je dostupná zcela zdarma a v českém jazyce.</p>
-							<p class="text-justify">Nyní následuje video tutoriál ve kterém se naučíme, jak zjistit nejužší a nejširší místo
+							<p class="text-justify">Nyní následuje video tutoriál ve kterém se naučíme, jak zjistit
+								nejužší a nejširší místo
 								na chodidle (Video 1).</p>
 							<figure class="figure mx-auto d-block w-75 py-4">
 								<video class="rounded img-fluid" controls muted>
@@ -425,14 +438,17 @@
 								<figcaption class="figure-caption text-center"><strong>Video 1</strong> Metoda
 									Chippaux-Šmiřák pomocí aplikace Geogebra</figcaption>
 							</figure>
-							<p class="text-justify">Na obrázku 14 je ukázán otisk chodidla s naměřenými hodnotami pro výpočet indexu nohy.</p>
+							<p class="text-justify">Na obrázku 14 je ukázán otisk chodidla s naměřenými hodnotami pro
+								výpočet indexu nohy.</p>
 							<figure class="figure mx-auto d-block w-25 py-4">
 								<a class="lightbox-style" href="imgs/navod/plantogram-1.jpg" data-lightbox="plantogram"
 									data-title="Plantogram po zpracování v aplikaci Geogebra">
-									<img src="imgs/navod/plantogram-1.jpg" class="figure-img img-fluid rounded mx-auto d-block"
+									<img src="imgs/navod/plantogram-1.jpg"
+										class="figure-img img-fluid rounded mx-auto d-block"
 										alt="Plantogram po zpracování v aplikaci Geogebra">
 								</a>
-								<figcaption class="figure-caption text-center"><strong>Obrázek 14</strong> Plantogram (Geogebra)</figcaption>
+								<figcaption class="figure-caption text-center"><strong>Obrázek 14</strong> Plantogram
+									(Geogebra)</figcaption>
 							</figure>
 						</div>
 					</div>
@@ -444,15 +460,18 @@
 								využití online výpočtu</h5>
 						</div>
 						<div class="card-body">
-							<p class="text-justify">Vypočítat index nohy pomocí Chippaux-Šmiřák koeficientu lze s využitím Excelu, či online kalkulačky na této stránce. 
-								Na videu 2 je ukázka výpočtu indexu nohy pomocí Excelu. Není důležité v jakých jednotkách je výpočet proveden, 
+							<p class="text-justify">Vypočítat index nohy pomocí Chippaux-Šmiřák koeficientu lze s
+								využitím Excelu, či online kalkulačky na této stránce.
+								Na videu 2 je ukázka výpočtu indexu nohy pomocí Excelu. Není důležité v jakých
+								jednotkách je výpočet proveden,
 								je však nutné, aby obě hodnoty (A, B) měli totožné jednotky.</p>
 							<figure class="figure mx-auto d-block w-75 py-4">
-								<video class="rounded img-fluid" controls muted>
+								<video class="rounded img-fluid" poster="placeholder.png" controls muted>
 									<source src="videos/excel.mp4" type="video/mp4">
 									Váš prohlížeč nepodporuje MP4 soubory.
 								</video>
-								<figcaption class="figure-caption text-center"><strong>Video 2</strong> Výpočet indexu nohy pomocí Excelu</figcaption>
+								<figcaption class="figure-caption text-center"><strong>Video 2</strong> Výpočet indexu
+									nohy pomocí Excelu</figcaption>
 							</figure>
 						</div>
 					</div>
@@ -477,7 +496,7 @@
 							<div class="col-lg-12 pt-4">
 								<div class="card border-dark shadow-sm d-flex">
 									<div class="card-header">
-											<h5 class="h6 mb-0">Výsledek</h5>
+										<h5 class="h6 mb-0">Výsledek</h5>
 									</div>
 									<div class="card-body" data-result>
 									</div>
@@ -488,17 +507,27 @@
 				</div>
 			</div>
 		</div>
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<img src="imgs/logotyp.png" class="w-75 figure-img img-fluid rounded mx-auto d-block pt-5 pb-3"
+						alt="Loga projektu">
+				</div>
+			</div>
+		</div>
 	</main>
 
 	<footer class="footer mt-auto py-3 text-muted bg-dark">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 py-1">
-					<p class="text-white-50 text-lg-left text-center">&copy; 2019 Podpora rozvoje digitální gramotnosti
+					<p class="text-white-50 text-lg-left text-center">&copy; 2019 | <a
+							href="https://pages.pedf.cuni.cz/digitalni-gramotnost/" class="text-white-50">Podpora
+							rozvoje digitální gramotnosti</a>
 					</p>
 				</div>
 				<div class="col-lg-6 py-1">
-					<p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 31.03.2019</p>
+					<p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 08.09.2019</p>
 				</div>
 			</div>
 		</div>
