--- a/plochonozi/teorie.html
+++ b/plochonozi/teorie.html
@@ -28,9 +28,9 @@
 
         <div class="collapse navbar-collapse" id="navbarsDefault">
           <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                  <a class="nav-link" href="dvz-plochonozi_metodicky-list.pdf">Metodický list</a>
-              </li>
+            <li class="nav-item">
+              <a class="nav-link" href="dvz-plochonozi_metodicky-list.pdf">Metodický list</a>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="dropdown1" data-toggle="dropdown" aria-haspopup="true"
                 aria-expanded="false">Moduly </a>
@@ -191,19 +191,29 @@
         </div>
       </div>
     </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <img src="imgs/logotyp.png" class="w-75 figure-img img-fluid rounded mx-auto d-block pt-5 pb-3"
+            alt="Loga projektu">
+        </div>
+      </div>
+    </div>
   </main>
 
   <footer class="footer mt-auto py-3 text-muted bg-dark">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 py-1">
-          <p class="text-white-50 text-lg-left text-center">&copy; 2019 Podpora rozvoje digitální gramotnosti</p>
+          <p class="text-white-50 text-lg-left text-center">&copy; 2019 | <a
+              href="https://pages.pedf.cuni.cz/digitalni-gramotnost/" class="text-white-50">Podpora rozvoje digitální
+              gramotnosti</a>
+          </p>
         </div>
         <div class="col-lg-6 py-1">
-          <p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 31.03.2019</p>
+          <p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 08.09.2019</p>
         </div>
       </div>
-    </div>
     </div>
   </footer>
 
@@ -220,7 +230,7 @@
       'wrapAround': true,
     })
   </script>
-  
+
 </body>
 
 </html>
