[added] logo digi (orienteering)

--- a/orienteering/index.html
+++ b/orienteering/index.html
@@ -105,8 +105,8 @@
 						</a>
 						<figcaption class="figure-caption text-center"><strong>Obrázek 1</strong> Ilustrativní příklad
 							skenování startovního
-							QE kódu prostřednictvím mobilního telefonu a aplikace iOrienteering (Zdroj: <a
-								href="http://www.iorienteering.com">iorienteering.com</a>)</figcaption>
+							QE kódu prostřednictvím mobilního telefonu a aplikace iOrienteering (<a
+								href="http://www.iorienteering.com">iOrienteering, 2019</a>)</figcaption>
 					</figure>
 
 					<h3 class="h4 pt-5" id="item-4">Postup vyučujícího (popř. osoby organizující orientační závod)</h3>
@@ -298,17 +298,27 @@
 				</div>
 			</div>
 		</div>
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<img src="imgs/logotyp.png" class="w-75 figure-img img-fluid rounded mx-auto d-block pt-5 pb-3"
+						alt="Loga projektu">
+				</div>
+			</div>
+		</div>
 	</main>
 
 	<footer class="footer mt-auto py-3 text-muted bg-dark">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 py-1">
-					<p class="text-white-50 text-lg-left text-center">&copy; 2019 Podpora rozvoje digitální gramotnosti
+					<p class="text-white-50 text-lg-left text-center">&copy; 2019 | <a
+							href="https://pages.pedf.cuni.cz/digitalni-gramotnost/" class="text-white-50">Podpora
+							rozvoje digitální gramotnosti</a>
 					</p>
 				</div>
 				<div class="col-lg-6 py-1">
-					<p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 09.05.2019</p>
+					<p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 08.09.2019</p>
 				</div>
 			</div>
 		</div>
