[added] atletika (videos), finished

--- a/atletika/diagnostika.html
+++ b/atletika/diagnostika.html
@@ -85,9 +85,9 @@
 								nebo otevřít video nahrané z paměti telefonu
 								(Obr. 1).</p>
 							<figure class="figure mx-auto d-block w-25 py-4">
-								<a class="lightbox-style" href="imgs/navod-2.png" data-lightbox="aplikace"
+								<a class="lightbox-style" href="imgs/navod-2.jpg" data-lightbox="aplikace"
 									data-title="2. krok – Nahrát/otevřít video">
-									<img src="imgs/navod-2.png" class="figure-img img-fluid rounded mx-auto d-block"
+									<img src="imgs/navod-2.jpg" class="figure-img img-fluid rounded mx-auto d-block"
 										alt="2. krok – Nahrát/otevřít video">
 								</a>
 								<figcaption class="figure-caption text-center"><strong>Obrázek 1</strong></figcaption>
@@ -103,9 +103,9 @@
 							<p>Pro nahrávání videa zmáčkněte ikonu <mark>Camera</mark>, pro import již nahraného videa z
 								paměti telefonu zmáčkněte ikonu <mark>Import</mark> (Obr. 2).</p>
 							<figure class="figure mx-auto d-block w-25 py-4">
-								<a class="lightbox-style" href="imgs/navod-5.png" data-lightbox="aplikace"
+								<a class="lightbox-style" href="imgs/navod-5.jpg" data-lightbox="aplikace"
 									data-title="3. krok – Camera/import tlačítka">
-									<img src="imgs/navod-5.png" class="figure-img img-fluid rounded mx-auto d-block"
+									<img src="imgs/navod-5.jpg" class="figure-img img-fluid rounded mx-auto d-block"
 										alt="3. krok – Camera/import tlačítka">
 								</a>
 								<figcaption class="figure-caption text-center"><strong>Obrázek 2</strong></figcaption>
@@ -118,29 +118,45 @@
 							<h5 class="h6 mb-0">4. krok</h5>
 						</div>
 						<div class="card-body">
-							<p>Nahrajte spolužáka při běhu pomocí červeného tlačítka.</p>
+							<p>Nahrajte spolužáka při běhu pomocí červeného tlačítka (Obr. 3).</p>
+							<figure class="figure mx-auto d-block w-50 py-4">
+								<a class="lightbox-style" href="imgs/navod-6.jpg" data-lightbox="aplikace"
+									data-title="4. krok – Nahrajte spolužáka při běhu pomocí červeného tlačítka">
+									<img src="imgs/navod-6.jpg" class="figure-img img-fluid rounded mx-auto d-block"
+										alt="4. krok – Nahrajte spolužáka při běhu pomocí červeného tlačítka">
+								</a>
+								<figcaption class="figure-caption text-center"><strong>Obrázek 3</strong></figcaption>
+							</figure>
 						</div>
 					</div>
-
-
 				</div>
 			</div>
 		</div>
-	</main>
-
-	<footer class="footer mt-auto py-3 text-muted bg-dark">
 		<div class="container">
-			<div class="row">
-				<div class="col-lg-6 py-1">
-					<p class="text-white-50 text-lg-left text-center">&copy; 2019 Podpora rozvoje digitální gramotnosti
-					</p>
-				</div>
-				<div class="col-lg-6 py-1">
-					<p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 25.08.2019</p>
+				<div class="row">
+					<div class="col-lg-12">
+						<img src="imgs/logotyp.png" class="w-75 figure-img img-fluid rounded mx-auto d-block pt-5 pb-3"
+							alt="Loga projektu">
+					</div>
 				</div>
 			</div>
-		</div>
-	</footer>
+		</main>
+	
+		<footer class="footer mt-auto py-3 text-muted bg-dark">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-6 py-1">
+						<p class="text-white-50 text-lg-left text-center">&copy; 2019 | <a
+								href="https://pages.pedf.cuni.cz/digitalni-gramotnost/" class="text-white-50">Podpora
+								rozvoje digitální gramotnosti</a>
+						</p>
+					</div>
+					<div class="col-lg-6 py-1">
+						<p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 08.09.2019</p>
+					</div>
+				</div>
+			</div>
+		</footer>
 
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
