--- a/atletika/index.html
+++ b/atletika/index.html
@@ -88,22 +88,31 @@
                 </a>
             </div>
         </div>
-    </main>
-
-    <footer class="footer mt-auto py-3 text-muted bg-dark">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-6 py-1">
-                    <p class="text-white-50 text-lg-left text-center">&copy; 2019 Podpora rozvoje digitální gramotnosti
-                    </p>
-                </div>
-                <div class="col-lg-6 py-1">
-                    <p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 25.08.2019</p>
-                </div>
-            </div>
-        </div>
-        </div>
-    </footer>
+			<div class="row">
+				<div class="col-lg-12">
+					<img src="imgs/logotyp.png" class="w-75 figure-img img-fluid rounded mx-auto d-block pt-5 pb-3"
+						alt="Loga projektu">
+				</div>
+			</div>
+		</div>
+	</main>
+
+	<footer class="footer mt-auto py-3 text-muted bg-dark">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-6 py-1">
+					<p class="text-white-50 text-lg-left text-center">&copy; 2019 | <a
+							href="https://pages.pedf.cuni.cz/digitalni-gramotnost/" class="text-white-50">Podpora
+							rozvoje digitální gramotnosti</a>
+					</p>
+				</div>
+				<div class="col-lg-6 py-1">
+					<p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 08.09.2019</p>
+				</div>
+			</div>
+		</div>
+	</footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
