--- a/atletika/teorie.html
+++ b/atletika/teorie.html
@@ -95,7 +95,7 @@
             oštěpem.</p>
           <p>V další části vaší výuky se zaměříme pouze na švihový běh, který se budete snažit naučit a nacházet správné
             či chybné provedení.</p>
-          <h4 class="h5 pt-4">Charakteristika švihového způsobu běhu</h4>
+          <h4 class="h5 pt-2">Charakteristika švihového způsobu běhu</h4>
           <ul>
             <li>Slouží k ekonomickému udržování rychlosti běhu.</li>
             <li>Došlap chodidla je realizován před svislou těžnici.</li>
@@ -155,7 +155,7 @@
             Běh má tedy cyklický charakter. Rychlost běhu je ovlivněna délkou a frekvencí jednotlivých kroků. Běžecký
             krok můžeme rozdělit na dvě fáze: <mark>oporová</mark> a <mark>letová</mark>.</p>
 
-          <h4 class="h5 pt-4">Fáze oporová</h4>
+          <h4 class="h5 pt-2">Fáze oporová</h4>
           <p>Fáze oporová se skládá z <mark>dokroku</mark>, <mark>momentu vertikály</mark> a <mark>odrazu</mark> (Obr.
             1).</p>
           <figure class="figure mx-auto d-block w-75 py-4">
@@ -189,13 +189,203 @@
             paží, v náklonu trupu, v došlapu na podložku aj.).</p>
 
 
+          <h3 class="h4 pt-4" id="item-5">Nejčastější chyby při běhu</h3>
+          <hr class="my-4">
+          <ol class="pb-2">
+            <li>
+              <a href="#chyba-1">Dokrok na patu, nedochází k dvojité práci kotníků</a>
+            </li>
+            <li>
+              <a href="#chyba-2">Vytáčení špiček chodidel do stran při došlapu</a>
+            </li>
+            <li>
+              <a href="#chyba-3">Malý rozšvih paží</a>
+            </li>
+            <li>
+              <a href="#chyba-4">Pohyb paží do stran</a>
+            </li>
+            <li>
+              <a href="#chyba-5">Pohyb s nataženými pažemi</a>
+            </li>
+            <li>
+              <a href="#chyba-6">Nedopnutí odrazové nohy, nízko zvednuté koleno švihové nohy</a>
+            </li>
+            <li>
+              <a href="#chyba-7">Běh v záklonu</a>
+            </li>
+            <li>
+              <a href="#chyba-8">Běh s předkloněnou hlavou</a>
+            </li>
+            <li>
+              <a href="#chyba-9">Malý rozsah běžeckých kroků</a>
+            </li>
+          </ol>
+
+          <div id="chyba-1"></div>
+          <div class="card border-dark shadow-sm d-flex mt-4">
+            <div class="card-header">
+              <h5 class="h6 mb-0">1. Dokrok na patu, nedochází k dvojité práci kotníků</h5>
+            </div>
+            <div class="card-body">
+              <figure class="figure mx-auto d-block w-75 py-4">
+                <video class="rounded img-fluid" controls muted>
+                  <source src="videos/ch1.mp4" type="video/mp4">
+                  Váš prohlížeč nepodporuje MP4 soubory.
+                </video>
+                <figcaption class="figure-caption text-center"><strong>Video 1</strong> Dokrok na patu, nedochází k
+                  dvojité práci kotníků</figcaption>
+              </figure>
+            </div>
+          </div>
+
+          <div id="chyba-2"></div>
+          <div class="card border-dark shadow-sm d-flex mt-4">
+            <div class="card-header">
+              <h5 class="h6 mb-0">2. Vytáčení špiček chodidel do stran při došlapu</h5>
+            </div>
+            <div class="card-body">
+              <figure class="figure mx-auto d-block w-75 py-4">
+                <video class="rounded img-fluid" controls muted>
+                  <source src="videos/ch2.mp4" type="video/mp4">
+                  Váš prohlížeč nepodporuje MP4 soubory.
+                </video>
+                <figcaption class="figure-caption text-center"><strong>Video 2</strong> Vytáčení špiček chodidel do
+                  stran při došlapu</figcaption>
+              </figure>
+            </div>
+          </div>
+
+          <div id="chyba-3"></div>
+          <div class="card border-dark shadow-sm d-flex mt-4">
+            <div class="card-header">
+              <h5 class="h6 mb-0">3. Malý rozšvih paží</h5>
+            </div>
+            <div class="card-body">
+              <figure class="figure mx-auto d-block w-75 py-4">
+                <video class="rounded img-fluid" controls muted>
+                  <source src="videos/ch3.mp4" type="video/mp4">
+                  Váš prohlížeč nepodporuje MP4 soubory.
+                </video>
+                <figcaption class="figure-caption text-center"><strong>Video 3</strong> Malý rozšvih paží</figcaption>
+              </figure>
+            </div>
+          </div>
+
+          <div id="chyba-4"></div>
+          <div class="card border-dark shadow-sm d-flex mt-4">
+            <div class="card-header">
+              <h5 class="h6 mb-0">4. Pohyb paží do stran</h5>
+            </div>
+            <div class="card-body">
+              <figure class="figure mx-auto d-block w-75 py-4">
+                <video class="rounded img-fluid" controls muted>
+                  <source src="videos/ch4.mp4" type="video/mp4">
+                  Váš prohlížeč nepodporuje MP4 soubory.
+                </video>
+                <figcaption class="figure-caption text-center"><strong>Video 4</strong> Pohyb paží do stran</figcaption>
+              </figure>
+            </div>
+          </div>
+
+          <div id="chyba-5"></div>
+          <div class="card border-dark shadow-sm d-flex mt-4">
+            <div class="card-header">
+              <h5 class="h6 mb-0">5. Pohyb s nataženými pažemi</h5>
+            </div>
+            <div class="card-body">
+              <figure class="figure mx-auto d-block w-75 py-4">
+                <video class="rounded img-fluid" controls muted>
+                  <source src="videos/ch5.mp4" type="video/mp4">
+                  Váš prohlížeč nepodporuje MP4 soubory.
+                </video>
+                <figcaption class="figure-caption text-center"><strong>Video 5</strong> Pohyb s nataženými pažemi
+                </figcaption>
+              </figure>
+            </div>
+          </div>
+
+          <div id="chyba-6"></div>
+          <div class="card border-dark shadow-sm d-flex mt-4">
+            <div class="card-header">
+              <h5 class="h6 mb-0">6. Nedopnutí odrazové nohy, nízko zvednuté koleno švihové nohy</h5>
+            </div>
+            <div class="card-body">
+              <figure class="figure mx-auto d-block w-75 py-4">
+                <video class="rounded img-fluid" controls muted>
+                  <source src="videos/ch6.mp4" type="video/mp4">
+                  Váš prohlížeč nepodporuje MP4 soubory.
+                </video>
+                <figcaption class="figure-caption text-center"><strong>Video 6</strong> Nedopnutí odrazové nohy, nízko
+                  zvednuté koleno švihové nohy</figcaption>
+              </figure>
+            </div>
+          </div>
+
+          <div id="chyba-7"></div>
+          <div class="card border-dark shadow-sm d-flex mt-4">
+            <div class="card-header">
+              <h5 class="h6 mb-0">7. Běh v záklonu</h5>
+            </div>
+            <div class="card-body">
+              <figure class="figure mx-auto d-block w-75 py-4">
+                <video class="rounded img-fluid" controls muted>
+                  <source src="videos/ch7.mp4" type="video/mp4">
+                  Váš prohlížeč nepodporuje MP4 soubory.
+                </video>
+                <figcaption class="figure-caption text-center"><strong>Video 7</strong> Běh v záklonu</figcaption>
+              </figure>
+            </div>
+          </div>
+
+          <div id="chyba-8"></div>
+          <div class="card border-dark shadow-sm d-flex mt-4">
+            <div class="card-header">
+              <h5 class="h6 mb-0">8. Běh s předkloněnou hlavou</h5>
+            </div>
+            <div class="card-body">
+              <figure class="figure mx-auto d-block w-75 py-4">
+                <video class="rounded img-fluid" controls muted>
+                  <source src="videos/ch8.mp4" type="video/mp4">
+                  Váš prohlížeč nepodporuje MP4 soubory.
+                </video>
+                <figcaption class="figure-caption text-center"><strong>Video 8</strong> Běh s předkloněnou hlavou
+                </figcaption>
+              </figure>
+            </div>
+          </div>
+
+          <div id="chyba-9"></div>
+          <div class="card border-dark shadow-sm d-flex mt-4">
+            <div class="card-header">
+              <h5 class="h6 mb-0">9. Malý rozsah běžeckých kroků</h5>
+            </div>
+            <div class="card-body">
+              <figure class="figure mx-auto d-block w-75 py-4">
+                <video class="rounded img-fluid" controls muted>
+                  <source src="videos/ch9.mp4" type="video/mp4">
+                  Váš prohlížeč nepodporuje MP4 soubory.
+                </video>
+                <figcaption class="figure-caption text-center"><strong>Video 9</strong> Malý rozsah běžeckých kroků
+                </figcaption>
+              </figure>
+            </div>
+          </div>
+
+
           <h3 class="h4 pt-4" id="item-7">Použitá literatura</h3>
           <hr class="my-4">
           <div class="references">
-            <p>Zdroj 1</p>
-            <p>Zdroj 2</p>
-            <p>Zdroj 3</p>
+            <p>Valter, L., & Nosek. M. (2007). <i>Vybrané kapitoly z atletiky</i>. Ústí nad Labem: Univerzita Jana
+              Evangelisty Purkyně.</p>
           </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <img src="imgs/logotyp.png" class="w-75 figure-img img-fluid rounded mx-auto d-block pt-5 pb-3"
+            alt="Loga projektu">
         </div>
       </div>
     </div>
@@ -205,13 +395,15 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 py-1">
-          <p class="text-white-50 text-lg-left text-center">&copy; 2019 Podpora rozvoje digitální gramotnosti</p>
+          <p class="text-white-50 text-lg-left text-center">&copy; 2019 | <a
+              href="https://pages.pedf.cuni.cz/digitalni-gramotnost/" class="text-white-50">Podpora
+              rozvoje digitální gramotnosti</a>
+          </p>
         </div>
         <div class="col-lg-6 py-1">
-          <p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 25.08.2019</p>
+          <p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 08.09.2019</p>
         </div>
       </div>
-    </div>
     </div>
   </footer>
 
