--- a/atletika/test.html
+++ b/atletika/test.html
@@ -26,22 +26,22 @@
 				</button>
 
 				<div class="collapse navbar-collapse" id="navbarsDefault">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="dvz-atletika_metodicky-list.pdf">Metodický list</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="dropdown1" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">Moduly </a>
-                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown1">
-                                <a class="dropdown-item" href="teorie.html">Úvod do problematiky</a>
-                                <a class="dropdown-item" href="test.html">Vědomostní kvíz</a>
-                                <a class="dropdown-item" href="diagnostika.html">Analýza techniky běhu</a>
-                                <a class="dropdown-item" href="cviceni.html">Soubor cvičení</a>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
+					<ul class="navbar-nav ml-auto">
+						<li class="nav-item">
+							<a class="nav-link" href="dvz-atletika_metodicky-list.pdf">Metodický list</a>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="dropdown1" data-toggle="dropdown"
+								aria-haspopup="true" aria-expanded="false">Moduly </a>
+							<div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown1">
+								<a class="dropdown-item" href="teorie.html">Úvod do problematiky</a>
+								<a class="dropdown-item" href="test.html">Vědomostní kvíz</a>
+								<a class="dropdown-item" href="diagnostika.html">Analýza techniky běhu</a>
+								<a class="dropdown-item" href="cviceni.html">Soubor cvičení</a>
+							</div>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</nav>
 
@@ -71,6 +71,13 @@
 				</div>
 			</div>
 		</div>
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+					<img src="imgs/logotyp.png" class="w-75 figure-img img-fluid rounded mx-auto d-block pt-5 pb-3"
+						alt="Loga projektu">
+				</div>
+			</div>
 		</div>
 	</main>
 
@@ -78,14 +85,15 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 py-1">
-					<p class="text-white-50 text-lg-left text-center">&copy; 2019 Podpora rozvoje digitální gramotnosti
+					<p class="text-white-50 text-lg-left text-center">&copy; 2019 | <a
+							href="https://pages.pedf.cuni.cz/digitalni-gramotnost/" class="text-white-50">Podpora
+							rozvoje digitální gramotnosti</a>
 					</p>
 				</div>
 				<div class="col-lg-6 py-1">
-					<p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 25.08.2019</p>
+					<p class="text-white-50 text-lg-right text-center">Naposledy aktualizováno 08.09.2019</p>
 				</div>
 			</div>
-		</div>
 		</div>
 	</footer>
 
